--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
-<link href="styles/tailwind.css" rel="stylesheet" />
-<link rel="stylesheet" href="./styles/style.css">
+<link href="tailwind.css" rel="stylesheet" />
+<link rel="stylesheet" href="style.css">
 <html class="h-screen">
 
 <body class="flex justify-center items-center h-screen">
